Reverted 'List' to 'ImmutableList', and other minor optimizations.