@@ -1,14 +1,13 @@
 package io.luna.game.model.mob;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Range;
 import io.luna.Luna;
 import io.luna.game.event.impl.SkillChangeEvent;
 import io.luna.game.plugin.PluginManager;
 
-import java.util.List;
-import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.google.common.base.Preconditions.checkArgument;
@@ -21,9 +20,9 @@ import static com.google.common.base.Preconditions.checkArgument;
 public final class Skill {
 
     /**
-     * An unmodifiable list of the names of all skills.
+     * An immutable list of the names of all skills.
      */
-    public static final List<String> NAMES = List.of(
+    public static final ImmutableList<String> NAMES = ImmutableList.of(
         "Attack", "Defence", "Strength", "Hitpoints", "Ranged", "Prayer", "Magic",
         "Cooking", "Woodcutting", "Fletching", "Fishing", "Firemaking", "Crafting", "Smithing",
         "Mining", "Herblore", "Agility", "Thieving", "Slayer", "Farming", "Runecrafting"
@@ -35,9 +34,9 @@ public final class Skill {
     public static final Range<Integer> COMBAT_IDS = Range.closed(0, 6);
 
     /**
-     * An unmodifiable map of names to identifiers.
+     * An immutable map of names to identifiers.
      */
-    public static final Map<String, Integer> NAME_TO_ID;
+    public static final ImmutableMap<String, Integer> NAME_TO_ID;
 
     /**
      * The Attack identifier.
@@ -177,7 +176,7 @@ public final class Skill {
     static {
         // Build and set [name -> identifier] cache.
         NAME_TO_ID = IntStream.range(0, NAMES.size()).boxed()
-                .collect(Collectors.toUnmodifiableMap(NAMES::get, Function.identity()));
+                .collect(ImmutableMap.toImmutableMap(NAMES::get, Function.identity()));
     }
 
     /**
@@ -233,7 +232,6 @@ public final class Skill {
      */
     public void addExperience(double amount) {
         checkArgument(amount > 0, "amount <= 0");
-
         amount = amount * Luna.settings().experienceMultiplier();
         setExperience(experience + amount);
     }
@@ -324,8 +322,7 @@ public final class Skill {
      */
     public void removeLevels(int amount) {
         int newAmount = getLevel() - amount;
-
-        newAmount = newAmount < 0 ? 0 : newAmount;
+        newAmount = Math.max(newAmount, 0);
         setLevel(newAmount);
     }
 
