@@ -1,24 +1,23 @@
 package io.luna.game.model.mob.block;
 
+import com.google.common.collect.ImmutableList;
 import io.luna.game.model.mob.Player;
 import io.luna.net.codec.ByteMessage;
-
-import java.util.List;
 
 import static io.luna.game.model.mob.block.UpdateState.UPDATE_LOCAL;
 
 /**
- * An {@link UpdateBlockSet} implementation that handles the encoding of {@link Player} update
+ * An {@link AbstractUpdateBlockSet} implementation that handles the encoding of {@link Player} update
  * blocks.
  *
  * @author lare96 <http://github.com/lare96>
  */
-public class PlayerUpdateBlockSet extends UpdateBlockSet<Player> {
+public class PlayerUpdateBlockSet extends AbstractUpdateBlockSet<Player> {
 
     /**
-     * An unmodifiable list of update blocks.
+     * An immutable list of update blocks.
      */
-    private static final List<UpdateBlock> UPDATE_BLOCKS = List.of(
+    private static final ImmutableList<UpdateBlock> UPDATE_BLOCKS = ImmutableList.of(
         new GraphicUpdateBlock(),
         new AnimationUpdateBlock(),
         new ForcedChatUpdateBlock(),
@@ -40,7 +39,6 @@ public class PlayerUpdateBlockSet extends UpdateBlockSet<Player> {
 
     @Override
     public void addBlockSet(Player player, ByteMessage msg, UpdateState state) {
-
         // If we can use a cached update block and the player has one, do it here.
         boolean isCachingBlocks = state == UPDATE_LOCAL;
         if (isCachingBlocks && player.hasCachedBlock()) {
