@@ -1,8 +1,7 @@
 package io.luna.util;
 
+import com.google.common.collect.ImmutableList;
 import io.luna.game.model.mob.Player;
-
-import java.util.List;
 
 import static com.google.common.base.Preconditions.checkArgument;
 
@@ -14,9 +13,9 @@ import static com.google.common.base.Preconditions.checkArgument;
 public final class DialogueUtils {
 
     /**
-     * An unmodifiable list of "Make item" model widgets.
+     * An immutable list of "Make item" model widgets.
      */
-    private static final List<int[]> MAKE_ITEM_MODELS = List.of(
+    private static final ImmutableList<int[]> MAKE_ITEM_MODELS = ImmutableList.of(
         new int[] {8884},
         new int[] {8869, 8870},
         new int[] {8883, 8884, 8885},
@@ -25,9 +24,9 @@ public final class DialogueUtils {
     );
 
     /**
-     * An unmodifiable list of "Make item" text widgets.
+     * An immutable list of "Make item" text widgets.
      */
-    private static final List<int[]> MAKE_ITEM_TEXTS = List.of(
+    private static final ImmutableList<int[]> MAKE_ITEM_TEXTS = ImmutableList.of(
         new int[] {8893},
         new int[] {8873, 8876},
         new int[] {8889, 8893, 8897},
